# tp-siris-service-discovery

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.py  docker-bake.hcl  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: docker.yaml
static/: style.css
templates/: index.html
